--- a/src/about.html
+++ b/src/about.html
@@ -122,8 +122,10 @@
                                     </li>
                                 </ul>
                             </div>
+                        </div>
                             <br>
                             <br>
+                        <div class="work-page__how-work">
                             <h2>Safe driving</h2>
                             <br>
                             <br>
